--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,9 +20,15 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
+        spring.json.value.default.type: com.cloudcart.order.event.OrderCreatedEvent
     consumer:
       group-id: order-group
       auto-offset-reset: earliest
+
+  testcontainers:
+    enabled: false
 
 
 logging:
@@ -33,6 +39,7 @@ logging:
       type:
         descriptor:
           sql: TRACE
+    org.apache.kafka: DEBUG
 
 
 jwt:
